[build-system]
requires = ["setuptools", "wheel", "jax"]
build-backend = "setuptools.build_meta"

[project]
name = "tsnex"
dynamic = ["version"]
description = "Minimal t-distributed stochastic neighbor embedding (t-SNE) implementation in JAX."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Albert Alonso", email = "alonfnt@pm.me"},
]
license = {file = "LICENSE"}
keywords = ["jax", "tsne", "python", "data-visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["jax", "pcax", ]

[tool.setuptools.dynamic]
version = {attr = "tsnex.__version__"}

[project.urls]
"Homepage" = "https://github.com/alonfnt/tsnex"
"Documentation" = "https://github.com/alonfnt/tsnex"
"Source" = "https://github.com/alonfnt/tsnex"
"Bug Tracker" = "https://github.com/alonfnt/tsnex/issues"
